--- a/Style/Admin_ShowcasePageCSS.css
+++ b/Style/Admin_ShowcasePageCSS.css
@@ -119,9 +119,12 @@ body {
     color: #555;
 }
 
+.content input[type="file"] {
+    font-family: louis;
+}
+
 .content input[type="text"],
 .content input[type="email"],
-.content input[type="file"],
 .content input[type="password"] {
     width: 80%;
     max-width: 500px;
@@ -140,21 +143,30 @@ body {
     box-shadow: 0 0 8px rgba(0, 123, 255, 0.5);
 }
 
+td {
+    align-items: center;
+    text-align: center;
+}
+
 /* Buttons */
 .content button {
-    
+    background-color: transparent;
+    align-items: center;
+    margin-top:1vw;
+    font-family: louis;
     width: 6vw;   
-    color: white;
+    color: gray;
     border: none;
     border-radius: 25px;
-    font-size: 16px;
+    font-size: 0.8vw;
     cursor: pointer;
-    transition: background-color 0.3s ease, transform 0.3s ease;
+    transition: 0.3s ease, transform 0.3s ease;
 }
 
 .content button:hover {
-    background-color: #ff6464;
+    /* background-color: #ff6464; */
     transform: scale(1.05);
+    opacity: 60%;
 }
 
 /* Custom Scrollbar Design */
@@ -175,6 +187,10 @@ body {
 
 ::-webkit-scrollbar-thumb:hover {
     background: #555;
+}
+
+h1 {
+    padding-left: 0.5vw;
 }
 
 /* Prevent horizontal scrolling */
@@ -264,10 +280,6 @@ tr {
     padding: 10px 10px 0px 10px;
 }
 
-.cancel-btn {
-   
-    background-color: rgb(224, 78, 78);
-}
 
 .txt-cancel {
     font-family: louis;
@@ -365,27 +377,6 @@ tr {
     margin-top: 20px;
 }
 
-.submit-btn, .close-btn {
-    padding: 10px 20px;
-    margin: 5px;
-    font-size: 16px;
-    cursor: pointer;
-}
-
-.submit-btn {
-    background-color: #4CAF50;
-    color: white;
-    border: none;
-    border-radius: 5px;
-}
-
-.close-btn {
-    background-color: #f44336;
-    color: white;
-    border: none;
-    border-radius: 5px;
-}
-
 /* Make the modal visible when triggered */
 .modal.show {
     display: block;
@@ -396,11 +387,25 @@ form {
 }
 
 .fileUpload {
+    width: 100%;
     display: table-row;
     
 }
 
 #submit {
     background-color: green;
+}
+
+textarea {
+    font-size: 1vw;
+    text-align: center;
+    border: none;
+    border-radius: 15px;
+    font-family: louis;
+    height: auto;
+}
+
+.fileUpload {
+    text-align: center;
 }
 
