Completed Admin Dashboard

--- a/Style/Admin_FAQPageCSS.css
+++ b/Style/Admin_FAQPageCSS.css
@@ -522,6 +522,7 @@ form {
 
 /* Modal Background */
 .modal-question {
+    padding-top: 10%;
     display: none;  /* Hidden by default */
     position: fixed;
     z-index: 10;  /* Sit on top */
@@ -588,10 +589,10 @@ form {
     position: fixed; /* Stay in place */
     z-index: 1; /* Sit on top */
     left: 0;
-    top: 0;
+    top: -100;
     width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
+    height: auto; /* Full height */
+    overflow: hidden; /* Enable scroll if needed */
     background-color: rgb(0, 0, 0); /* Fallback color */
     background-color: rgba(0, 0, 0, 0.4); /* Black with opacity */
 }
