--- a/Style/User_LoginPageCSS.css
+++ b/Style/User_LoginPageCSS.css
@@ -1,9 +1,17 @@
+body {
+    font-family: louis;
+}
+
 .loginForm {
     padding: 0.5vh;
     margin-top: 15vh;
     background-color: #f9f9f9;
     width: 20vw;
     border-radius: 40px;
+}
+
+.error {
+    font-family: louis;
 }
 
 /* Text styling */
