--- a/Style/Calendar.css
+++ b/Style/Calendar.css
@@ -15,6 +15,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
 }
 .calntime-modal-content {
     background: white;
